Ajustes Modo oscuro

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
 .darkTheme {
     --primary: #ff8906;
     --boxPrimary: #16161a;
-    --light: #72757e;
+    --light: #313154;
     --grey: #EEE;
     --dark: #EEE;
     --danger: #e53170;
