Ajustes de alineacion

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,12 @@
     --dark: #EEE;
     --danger: #e53170;
 }
+img {
+    margin-left: auto;
+    display: block;
+    margin-bottom: 1rem;
+   }
+   
 
 /*Reset*/
 * {
@@ -66,7 +72,8 @@ h4 {
     color: var(--grey);
     font-size: 0.875rem;
     font-weight: 700;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 /*Saludo personalizado*/
