--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,6 @@ img {
     display: block;
     margin-bottom: 1rem;
    }
-   
 
 /*Reset*/
 * {
@@ -282,4 +281,15 @@ input:checked ~ .bubble::after {
     .toDoItem .toDoContent input {
         max-width: 50px;
     }
+}
+
+/*Alertas*/
+.swal-modal {
+    background-color: var(--light);
+}
+.swal-title {
+    color: var(--dark);
+}
+.swal-text {
+    color: var(--dark);
 }
